# tama

./: .gitignore  tama.kicad_pcb  tama.kicad_pro  tama.kicad_sch
fw/: .gitattributes  AGENTS.md  Cargo.toml  README.md
fw/crates/tama-core/: Cargo.toml
fw/crates/tama-core/src/: assets.rs  buzzer.rs  consts.rs  engine.rs  gfx.rs  input.rs  lib.rs  log_buffer.rs  output.rs
fw/crates/tama-core/src/scenes/: dvd.rs  flappy.rs  menu.rs  mod.rs  selftest.rs
fw/crates/tama-desktop/: Cargo.toml
fw/crates/tama-desktop/src/: buzzer.rs  log.rs  log_capture.rs  main.rs  mock_hw_tui.rs
fw/crates/tama-esp32/: Cargo.toml  sdkconfig.defaults
fw/crates/tama-esp32/.cargo/: config.toml
fw/crates/tama-esp32/src/: log_capture.rs  main.rs
fw/crates/tama-esp32/src/peripherals/: adc_bus.rs  button_driver.rs  display_driver.rs  mod.rs  power_control.rs  pwm_bus.rs  sensor_driver.rs  sensors_i2c.rs
