[package]
name = "tama-core"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { workspace = true }
defmt-macros = "1.0.1"
embedded-graphics = { workspace = true }
enum_dispatch = "0.3.13"
heapless = "0.9.1"
log = "0.4"
lazy_static = "1.5.0"
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
tinybmp = "0.6.0"
