[package]
name = "tama-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
tama-core = { path = "../tama-core" }

embedded-graphics = { workspace = true }
anyhow = "1.0.100"
embedded-graphics-simulator = "0.8.0"
log = { version = "0.4", features = ["std"] }
rodio = "0.19"
ratatui = "0.29"
crossterm = "0.28"
